--- a/resume.html
+++ b/resume.html
@@ -1,86 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <!-- Required meta tags -->
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <!-- bootstrap link -->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+ <!-- font awesome link for icons -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+   integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+ <!-- favicon -->
+ <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
 
-
-
-  <!-- bootstrap link -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-  <!-- font awesome link for icons -->
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-
-  <!-- favicon -->
-  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
-
-  <!-- Css link for footer-->
-  <link rel="stylesheet" href="style.css">
-
+ <!-- devicon -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+ <!-- google fonts -->
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+ <!-- animate.css -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+ <!-- Css link for footer-->
+ <link rel="stylesheet" href="style.css">
   <title>Resume</title>
 
 
 </head>
-<body>
-    <!-- Nav bar ------------------------------------------------------------>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="my logo"></a>
+<body>
+  <!-- Nav bar ------------------------------------------------------------>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home/About <span class="sr-only">(current)</span></a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <a href="https://github.com/rsg71" target="_blank"><i class="fab fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-      class="fab fa-linkedin-in"></i></a>
-  <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
-    <i class="fab fa-instagram"></i></a>
+
 
   <!-- End Nav bar ------------------------------------------------------->
-    
-    <img src="imgs/resume-R.jpg" id="resume">
+
+  <div class="container">
+<br>
+    <div class="row" style="font-size: 2rem;">
+      <div class="col">
+        
+      <a href="https://docs.google.com/document/d/19iZ_UxZIsaVECLY9n4aJoDDNAEUgPlNMB02JdeULLEM/edit?usp=sharing"
+        target="_blank">Download <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-arrow-down-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7.5 1.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4a.5.5 0 0 0-1 0v3.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 11.293V7.5z"/>
+        </svg></a>
+    </div>
+  </div>
+<br>
+    <div class="row">
+      <div class="col-lg-12">
+        <img src="imgs/rgResume/rgResume-1.png" class="resume">
+        <br>
+        <br>
+        <br>
+        <img src="imgs/rgResume/rgResume-2.png" class="resume">
+      </div>
+    </div>
+
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
 
     <!-- Footer-------------------------------------------------------------->
 
-  
-    <footer class="footer footer-resume mx-auto">
-      <div class="footer-links">
-        <a href="https://github.com/rsg71" target="_blank">Github<i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn<i
-            class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">Instagram
-          <i class="fab fa-instagram"></i></a>
+    <footer class="footer">
+      <div class="col-xs-4">
+        <h5>Get in Touch</h5>
+        <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i> robert.greenawalt29@gmail.com</a></p>
       </div>
-</footer>
-<!-------------------------------------------------- End Footer ----------------------------->
+      <div class="col-xs-4">
+        <h5>Site Navigation</h5>
+        <p><a href="portfolio.html">Portfolio</a></p>
+        <p><a href="resume.html">Resume</a></p>
+        <p><a href="contact.html">Contact</a></p>
+      </div>
+      <div class="col-xs-4">
+        <h5>Account Links</h5>
+        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+      </div>
+  </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-  crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"></script>
+  <!-------------------------------------------------- End Footer ----------------------------->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
