--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,24 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap  -->
+  <!-- bootstrap link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <!-- font awesome link for icons -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-  <!-- Css link for footer-->
-  <link rel="stylesheet" href="style.css">
   <!-- favicon -->
   <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
+
+  <!-- devicon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <!-- animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- Css link for footer-->
+  <link rel="stylesheet" href="style.css">
   <title>Contact | Robert Greenawalt</title>
 </head>
 
@@ -22,23 +30,26 @@
 
   <!-- Nav bar ------------------------------------------------------------------------------------->
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="my logo"></a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -48,59 +59,52 @@
   <!-- End Nav bar -------------------------------------------------------------------------------->
 
 
-  <main class="container contact">
-    <h1 class="mt-3">Contact</h1>
-    <form id="cform" method="POST" data-email="from_email@example.com"
-      action="/">
-      
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="input1">First Name:</label>
-          <input type="name" name="firstName" id="firstName" class="form-control" id="inputfirstname" placeholder="First">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="input2">Last Name:</label>
-          <input type="name" name="lastName" id="lastName" class="form-control" id="inputlastname" placeholder="Last">
-        </div>
-      </div>
+  <main class="container">
 
-      <div class="form-group">
-        <label for="exampleFormControlInput1">Email address:</label>
-        <input id="email" name="email" value="" type="email" class="form-control" class="exampleFormControlInput1"
-          placeholder="name@example.com">
-      </div>
 
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Message:</label>
-        <textarea id="message" name="message" class="form-control" class="exampleFormControlTextarea1"
-          placeholder="Enter message here" rows="7"></textarea>
+    <div class="row">
+      <div class="col">
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>Contact me</h1>
+        <span>
+        Email address:
+        <span></span>Robert.Greenawalt29@gmail.com</span>
       </div>
-    <button id="contact-submit-button" class="btn btn-dark" type="submit" value="Submit">Submit</button>
+    </div>
 
-    </form>
+   
+   
 
 
 
   </main>
-  <br>
-  <br>
-  <br>
-  <br>
+  
 
 
 
-  <!-- Footer-------------------------------------------------------------->
+  <!-- Footer------------------------------------------------------------ -->
 
 
-  <footer class="footer footer-contact mx-auto">
-    <div class="footer-links">
-      <a href="https://github.com/rsg71" target="_blank">Github<i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn<i
-          class="fab fa-linkedin-in"></i></a>
-      <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">Instagram
-        <i class="fab fa-instagram"></i></a>
+  <footer class="footer" style="width:100%; margin-top:20%">
+    <div class="col-xs-4">
+      <h5>Get in Touch</h5>
+      <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i> robert.greenawalt29@gmail.com</a></p>
     </div>
-  </footer>
+    <div class="col-xs-4">
+      <h5>Site Navigation</h5>
+      <p><a href="portfolio.html">Portfolio</a></p>
+      <p><a href="resume.html">Resume</a></p>
+      <p><a href="contact.html">Contact</a></p>
+    </div>
+    <div class="col-xs-4">
+      <h5>Account Links</h5>
+      <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+      <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+    </div>
+</footer>
 
   <!-------------------------------------------------- End Footer ----------------------------->
 
