edited footer format to respond better to mobile devices by using a fluid container; updated contact page with better structure and more information

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <!-- favicon -->
   <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
-
   <!-- devicon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
   <!-- google fonts -->
@@ -31,7 +30,7 @@
   <!-- Nav bar ------------------------------------------------------------------------------------->
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -59,7 +58,7 @@
   <!-- End Nav bar -------------------------------------------------------------------------------->
 
 
-  <main class="container">
+  <main class="container contact">
 
 
     <div class="row">
@@ -68,30 +67,94 @@
         <br>
         <br>
         <br>
+
         <h1>Contact me</h1>
         <span>
-        Email address:
-        <span></span>Robert.Greenawalt29@gmail.com</span>
+          <h5>Email address:</h5> <a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope"></i>
+            robert.greenawalt29@gmail.com</a>
+        </span>
+      </div>
+
+      <div class="col">
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1></i> Located In</h1>
+
+        <h5><i class="fas fa-map-marker-alt"></i> Philadelphia, PA</h5>
       </div>
     </div>
 
-   
-   
+        <br>
+        <br>
+        <br>
+        <br>
+
+    <div class="row">
+      <div class="col">
+        <h1>Follow Me</h1>
+
+        <h5><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></h5>
+        <h5><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></h5>
+
+      </div>
+    </div>
+
+    <!-- <div class="row">
+      <div class="col">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9v96L5CRysZlkIH1h12q7lxKlGwiK47uDr45IaDz3guIERw/viewform?embedded=true" width="840" height="673" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+    </div> -->
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 
   </main>
-  
+
 
 
 
   <!-- Footer------------------------------------------------------------ -->
-
-
-  <footer class="footer" style="width:100%; margin-top:20%">
+  <div class="container-fluid fluidFooter" style="text-align: center;">
+    <div class="row">
+        <div class="col">
+            <h5>Account Links</h5>
+            <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+            <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+        </div>
+        <div class="col">
+            <h5>Site Navigation</h5>
+            <p><a href="portfolio.html">Portfolio</a></p>
+            <p><a href="resume.html">Resume</a></p>
+            <p><a href="contact.html">Contact</a></p>
+        </div>
+        <div class="col">
+            <h5>Get in Touch</h5>
+            <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
+                robert.greenawalt29@gmail.com</a></p>
+        </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <!-- <footer class="footer">
     <div class="col-xs-4">
-      <h5>Get in Touch</h5>
-      <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i> robert.greenawalt29@gmail.com</a></p>
+      <h5>Account Links</h5>
+      <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+      <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
     </div>
     <div class="col-xs-4">
       <h5>Site Navigation</h5>
@@ -99,12 +162,13 @@
       <p><a href="resume.html">Resume</a></p>
       <p><a href="contact.html">Contact</a></p>
     </div>
+
     <div class="col-xs-4">
-      <h5>Account Links</h5>
-      <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-      <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+      <h5>Get in Touch</h5>
+      <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
+          robert.greenawalt29@gmail.com</a></p>
     </div>
-</footer>
+  </footer> -->
 
   <!-------------------------------------------------- End Footer ----------------------------->
 
