--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,6 @@
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <!-- favicon -->
   <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
-
   <!-- devicon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
   <!-- google fonts -->
@@ -31,7 +30,7 @@
   <!-- Nav bar -->
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -56,10 +55,16 @@
   </nav>
 
   <!-- End Nav bar ------------------------------------------------------------------------------->
-
+  <div class="jumbotron">
+    <h1 class="display-4">Portfolio</h1>
+  </div>
 
   <main class="container">
    
+
+      
+
+
     <div class="row">
       <div class="col-md-6">
         <div class="image">
@@ -218,24 +223,32 @@
 
   <!-- Footer-------------------------------------------------------------->
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
-  <footer class="footer">
-    <div class="col-xs-4">
-      <h5>Get in Touch</h5>
-      <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i> robert.greenawalt29@gmail.com</a></p>
+  <div class="container-fluid fluidFooter" style="text-align: center;">
+    <div class="row">
+        <div class="col">
+            <h5>Account Links</h5>
+            <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+            <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+        </div>
+        <div class="col">
+            <h5>Site Navigation</h5>
+            <p><a href="portfolio.html">Portfolio</a></p>
+            <p><a href="resume.html">Resume</a></p>
+            <p><a href="contact.html">Contact</a></p>
+        </div>
+        <div class="col">
+            <h5>Get in Touch</h5>
+            <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
+                robert.greenawalt29@gmail.com</a></p>
+        </div>
     </div>
-    <div class="col-xs-4">
-      <h5>Site Navigation</h5>
-      <p><a href="portfolio.html">Portfolio</a></p>
-      <p><a href="resume.html">Resume</a></p>
-      <p><a href="contact.html">Contact</a></p>
-    </div>
-    <div class="col-xs-4">
-      <h5>Account Links</h5>
-      <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-      <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
-    </div>
-</footer>
+  </div>
   <!-------------------------------------------------- End Footer ----------------------------->
 
 
