--- a/resume.html
+++ b/resume.html
@@ -2,27 +2,26 @@
 <html lang="en">
 
 <head>
- <!-- Required meta tags -->
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- <!-- bootstrap link -->
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
- <!-- font awesome link for icons -->
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
-   integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
- <!-- favicon -->
- <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
-
- <!-- devicon -->
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
- <!-- google fonts -->
- <link rel="preconnect" href="https://fonts.gstatic.com">
- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
- <!-- animate.css -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
- <!-- Css link for footer-->
- <link rel="stylesheet" href="style.css">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- bootstrap link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- font awesome link for icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+    integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
+  <!-- devicon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <!-- animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- Css link for footer-->
+  <link rel="stylesheet" href="style.css">
   <title>Resume</title>
 
 
@@ -32,7 +31,7 @@
   <!-- Nav bar ------------------------------------------------------------>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -60,18 +59,18 @@
 
   <!-- End Nav bar ------------------------------------------------------->
 
-  <div class="container">
-<br>
-    <div class="row" style="font-size: 2rem;">
+  <div class="container" style="max-width:67%;" id="resumeContainer">
+    <div class="row" style="font-size: 2rem; margin-top:1.5em;">
       <div class="col">
-        
-      <a href="https://docs.google.com/document/d/19iZ_UxZIsaVECLY9n4aJoDDNAEUgPlNMB02JdeULLEM/edit?usp=sharing"
-        target="_blank">Download <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-arrow-down-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7.5 1.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4a.5.5 0 0 0-1 0v3.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 11.293V7.5z"/>
-        </svg></a>
+        <a href="https://docs.google.com/document/d/19iZ_UxZIsaVECLY9n4aJoDDNAEUgPlNMB02JdeULLEM/edit?usp=sharing"
+          target="_blank" style="text-decoration: none;">Download <svg width="1em" height="1em" viewBox="0 0 16 16"
+            class="bi bi-file-earmark-arrow-down-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7.5 1.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4a.5.5 0 0 0-1 0v3.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 11.293V7.5z" />
+          </svg></a>
+      </div>
     </div>
-  </div>
-<br>
+    <br>
     <div class="row">
       <div class="col-lg-12">
         <img src="imgs/rgResume/rgResume-1.png" class="resume">
@@ -81,33 +80,42 @@
         <img src="imgs/rgResume/rgResume-2.png" class="resume">
       </div>
     </div>
-
+   
   </div>
 
   <br>
   <br>
   <br>
   <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
-    <!-- Footer-------------------------------------------------------------->
+  <!-- Footer-------------------------------------------------------------->
 
-    <footer class="footer">
-      <div class="col-xs-4">
-        <h5>Get in Touch</h5>
-        <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i> robert.greenawalt29@gmail.com</a></p>
+  <div class="container-fluid fluidFooter" style="text-align: center;">
+    <div class="row">
+      <div class="col">
+        <h5>Account Links</h5>
+        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
       </div>
-      <div class="col-xs-4">
+      <div class="col">
         <h5>Site Navigation</h5>
         <p><a href="portfolio.html">Portfolio</a></p>
         <p><a href="resume.html">Resume</a></p>
         <p><a href="contact.html">Contact</a></p>
       </div>
-      <div class="col-xs-4">
-        <h5>Account Links</h5>
-        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+      <div class="col">
+        <h5>Get in Touch</h5>
+        <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
+            robert.greenawalt29@gmail.com</a></p>
       </div>
-  </footer>
+    </div>
+  </div>
 
   <!-------------------------------------------------- End Footer ----------------------------->
 
