updating padding and text-align on brewery finder overlay description; edited format of contact page columns

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     <br>
     <div class="row">
       <div class="col-sm-12 greeting">
-        <!-- <h1 class="display-4"><strong class="introBox">Hello,</strong></h1> -->
         <h1 style="font-size:3.5em">Hello,</h1>
         <h1>
           [ <a href="https://github.com/rsg71" class="text-decoration-none" target="_blank"><i
@@ -93,7 +92,7 @@
           out
           some of my work in my <a href="portfolio.html">portfolio</a>, add me on <a
             href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">+LinkedIn</a>, or send me an
-          email through my <a href="contact.html">contact</a> page.</h4>
+          <a href="contact.html">email</a>.</h4>
       </div>
     </div>
 
@@ -107,32 +106,6 @@
     </div>
     <br>
 
-
-    <!-- technologies -->
-    <!-- <h2>Technologies:</h2>
-        <i class="devicon devicon-javascript-plain"></i>
-        <i class="devicon devicon-css3-plain-wordmark"></i>
-        <i class="devicon devicon-html5-plain-wordmark"></i>
-        <i class="devicon devicon-mysql-plain-wordmark"></i>
-        <i class="devicon devicon-mongodb-plain-wordmark"></i>
-        <i class="devicon devicon-express-original"></i>
-        <i class="devicon devicon-react-original-wordmark"></i>
-        <i class="devicon devicon-nodejs-plain"></i>
-        <i class="devicon devicon-sequelize-plain"></i>
-        <i class="devicon devicon-bootstrap-plain-wordmark"></i>
-        <i class="devicon devicon-heroku-plain-wordmark"></i>
-        <i class="devicon devicon-jquery-plain"></i>
-        <i class="devicon devicon-handlebars-plain-wordmark"></i>
-        <i class="devicon devicon-git-plain-wordmark"></i>
-        <br>
-        <br>
-        <br>
-        <br> -->
-
-    <!-- <div class="row" id="resume-portfolio-buttons">
-          <a href="portfolio.html" class="btn btn-lg btn-outline-light mx-auto" id="portfolio-btn-link">Portfolio</a>
-          <a href="resume.html" class="btn btn-lg btn-outline-light mx-auto" id="resume-btn-link">Resume</a>
-        </div> -->
 
     <br>
     <br>
@@ -225,7 +198,7 @@
           <img class="image__img" src="imgs/brewery-finder-shotsnapp.png" alt="brewery finder">
           <div class="image__overlay">
             <div class="image__title breweryFinder">Brewery Finder</div>
-            <p class="image__description introlight">
+            <p class="image__description introlight" style="text-align:center;padding:20px">
               Javascript, HTML, CSS, Yelp API, OpenBreweryDB API, Google Maps API
             </p>
             <span>
