--- a/contact.html
+++ b/contact.html
@@ -57,56 +57,43 @@
 
   <!-- End Nav bar -------------------------------------------------------------------------------->
 
+  <div class="jumbotron">
+    <h1 class="display-4">Contact</h1>
+  </div>
+
 
   <main class="container contact">
+    <br>
+    <br>
+    <br>
+    <br>
 
-
-    <div class="row">
+    <div class="row" style="text-align:center">
       <div class="col">
-        <br>
-        <br>
-        <br>
-        <br>
-
         <h1>Contact me</h1>
-        <span>
-          <h5>Email address:</h5> <a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope"></i>
-            robert.greenawalt29@gmail.com</a>
-        </span>
+        <h5>Email address:</h5> <a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope"></i>
+          robert.greenawalt29@gmail.com</a>
       </div>
 
       <div class="col">
-        <br>
-        <br>
-        <br>
-        <br>
         <h1></i> Located In</h1>
-
         <h5><i class="fas fa-map-marker-alt"></i> Philadelphia, PA</h5>
       </div>
-    </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-
-    <div class="row">
       <div class="col">
         <h1>Follow Me</h1>
-
         <h5><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></h5>
         <h5><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></h5>
-
       </div>
     </div>
 
-    <!-- <div class="row">
-      <div class="col">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9v96L5CRysZlkIH1h12q7lxKlGwiK47uDr45IaDz3guIERw/viewform?embedded=true" width="840" height="673" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-    </div> -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
+    
 
     <br>
     <br>
@@ -130,22 +117,22 @@
   <!-- Footer------------------------------------------------------------ -->
   <div class="container-fluid fluidFooter" style="text-align: center;">
     <div class="row">
-        <div class="col">
-            <h5>Account Links</h5>
-            <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-            <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
-        </div>
-        <div class="col">
-            <h5>Site Navigation</h5>
-            <p><a href="portfolio.html">Portfolio</a></p>
-            <p><a href="resume.html">Resume</a></p>
-            <p><a href="contact.html">Contact</a></p>
-        </div>
-        <div class="col">
-            <h5>Get in Touch</h5>
-            <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
-                robert.greenawalt29@gmail.com</a></p>
-        </div>
+      <div class="col">
+        <h5>Account Links</h5>
+        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
+        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+      </div>
+      <div class="col">
+        <h5>Site Navigation</h5>
+        <p><a href="portfolio.html">Portfolio</a></p>
+        <p><a href="resume.html">Resume</a></p>
+        <p><a href="contact.html">Contact</a></p>
+      </div>
+      <div class="col">
+        <h5>Get in Touch</h5>
+        <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
+            robert.greenawalt29@gmail.com</a></p>
+      </div>
     </div>
   </div>
   <br>
