--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- Css link for footer-->
   <link rel="stylesheet" href="style.css">
-  <title>Resume</title>
+  <title>Resume | Robert Greenawalt</title>
 
 
 </head>
@@ -59,11 +59,17 @@
 
   <!-- End Nav bar ------------------------------------------------------->
 
-  <div class="container" style="max-width:67%;" id="resumeContainer">
+  <div class="jumbotron">
+    <h1 class="display-4">Resume</h1>
+  </div>
+
+
+
+  <div class="container" style="max-width:60%;" id="resumeContainer">
     <div class="row" style="font-size: 2rem; margin-top:1.5em;">
       <div class="col">
         <a href="https://docs.google.com/document/d/19iZ_UxZIsaVECLY9n4aJoDDNAEUgPlNMB02JdeULLEM/edit?usp=sharing"
-          target="_blank" style="text-decoration: none;">Download <svg width="1em" height="1em" viewBox="0 0 16 16"
+          target="_blank" style="text-decoration: none;" >Download <svg width="1em" height="1em" viewBox="0 0 16 16"
             class="bi bi-file-earmark-arrow-down-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
               d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7.5 1.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4a.5.5 0 0 0-1 0v3.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 11.293V7.5z" />
