--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <li class="nav-item">
           <a class="nav-link" href="resume.html">Resume</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
@@ -62,53 +62,27 @@
   </div>
 
 
-  <main class="container contact">
-    <br>
-    <br>
-    <br>
-    <br>
 
-    <div class="row" style="text-align:center">
+  <main class="container contact">
+
+    <div class="row" style="text-align:center; margin:5em 0em 20em ">
       <div class="col">
-        <h1>Contact me</h1>
+        <h2>Contact me</h2>
         <h5>Email address:</h5> <a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope"></i>
           robert.greenawalt29@gmail.com</a>
       </div>
 
       <div class="col">
-        <h1></i> Located In</h1>
+        <h2></i> Located In</h2>
         <h5><i class="fas fa-map-marker-alt"></i> Philadelphia, PA</h5>
       </div>
 
       <div class="col">
-        <h1>Follow Me</h1>
+        <h2>Follow Me</h2>
         <h5><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></h5>
         <h5><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></h5>
       </div>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-
-
   </main>
 
 
@@ -119,8 +93,8 @@
     <div class="row">
       <div class="col">
         <h5>Account Links</h5>
-        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+        <p><a href="https://github.com/rsg71" target="_blank">Github <i class="fab fa-github"></i></a></p>
+        <p><a href="https://www.linkedin.com/in/robert-greenawalt/" target="_blank">LinkedIn <i class="fab fa-linkedin"></i></a></p>
       </div>
       <div class="col">
         <h5>Site Navigation</h5>
