--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <!-- google fonts recursive font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap" rel="stylesheet">
   <!-- animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- Css link for footer-->
@@ -29,8 +32,8 @@
 <body>
 
   <!-- Nav bar ------------------------------------------------------------>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <a class="navbar-brand" href="#"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blackp">
+    <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -38,7 +41,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -61,7 +64,7 @@
     <br>
     <div class="row">
       <div class="col-sm-12 greeting">
-        <h1 style="font-size:3.5em">Hello,</h1>
+        <h1 style="font-size:3.5em; letter-spacing: .1em;">Hello,</h1>
         <h1>
           [ <a href="https://github.com/rsg71" class="text-decoration-none" target="_blank"><i
               class="fab fa-github"></i></a> ,
@@ -73,37 +76,36 @@
         </h1>
       </div>
     </div>
-    <br>
+    <!-- <br> -->
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-12">
         <h2> I'm Robert and welcome to my site.</h2>
       </div>
 
-    </div>
+    </div> -->
 
     <br>
     <div class="row">
       <div class="col-sm-12">
-        <h2 class=""> I'm a <em>full-stack developer</em> with a dedication to lifelong
-          learning.</h2>
+        <h2 class=""> I'm Robert, a <em class="recursiveFont">full-stack developer</em> and lifelong learner.</h2>
         <br>
-        <h4 class="coreCompetencies">Core competencies include: MongoDB, MySQL, Express, React, and Node. Check
+        <p class="coreCompetencies">Core competencies include: MongoDB, MySQL, Express, React, and Node. Check
           out
           some of my work in my <a href="portfolio.html">portfolio</a>, add me on <a
-            href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">+LinkedIn</a>, or send me an
-          <a href="contact.html">email</a>.</h4>
+            href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn</a>, or send me an
+          <a href="contact.html">email</a>.</p>
       </div>
     </div>
 
     <br>
     <br>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col">
-        <h1 class="mx-auto" style="letter-spacing: .25em;">...</h1>
+        <h1 style="letter-spacing: .25em;">...</h1>
       </div>
-    </div>
+    </div> -->
     <br>
 
 
@@ -117,6 +119,7 @@
       </div>
       <br>
     </div>
+
     <div class="row">
       <div class="col-md-6">
         <div class="image">
@@ -134,8 +137,8 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="image" id="restaurantFinder" style="position:relative; top:120px;">
+      <div class="col-md-6 restaurantFinder">
+        <div class="image" id="restaurantFinder">
           <img class="image__img" src="imgs/restaurant-finder-shotsnapp-screen.png" alt="restaurant finder">
           <div class="image__overlay">
             <div class="image__title">Restaurant Finder</div>
@@ -156,7 +159,7 @@
     <br>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 columnMargin">
         <div class="image">
           <img class="image__img" src="imgs/budget-tool-shotsnapp.png" alt="budget tool">
           <div class="image__overlay">
@@ -174,7 +177,7 @@
       </div>
       <div class="col-md-6">
         <div class="image">
-          <img class="image__img" src="imgs/weather_app_shotsnapp.png" alt="weather app">
+          <img class="image__img" src="imgs/weather-app-rotated-blackbackground2.png" alt="weather app">
           <div class="image__overlay">
             <div class="image__title">Weather App</div>
             <p class="image__description introlight">
@@ -193,7 +196,9 @@
     <br>
 
     <div class="row">
-      <div class="col-md-6">
+
+
+      <div class="col-md-6 columnMargin">
         <div class="image">
           <img class="image__img" src="imgs/brewery-finder-shotsnapp.png" alt="brewery finder">
           <div class="image__overlay">
@@ -210,9 +215,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 ">
         <div class="image">
-          <img class="image__img" src="imgs/scheduler-extra-small.PNG" alt="work scheduler">
+          <img class="image__img" src="imgs/scheduler-window.png" alt="work scheduler">
           <div class="image__overlay">
             <div class="image__title">Work Day Scheduler</div>
             <p class="image__description introlight">
@@ -231,7 +236,7 @@
     <br>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 columnMargin">
         <div class="image">
           <img class="image__img" src="imgs/password-generator-shotsnapp.png" alt="password generator">
           <div class="image__overlay">
@@ -264,6 +269,7 @@
           </div>
         </div>
       </div>
+      <br>
 
       <br>
       <br>
@@ -295,8 +301,9 @@
     <div class="row">
       <div class="col">
         <h5>Account Links</h5>
-        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+        <p><a href="https://github.com/rsg71" target="_blank">Github <i class="fab fa-github"></i></a></p>
+        <p><a href="https://www.linkedin.com/in/robert-greenawalt/" target="_blank">LinkedIn <i
+              class="fab fa-linkedin"></i></a></p>
       </div>
       <div class="col">
         <h5>Site Navigation</h5>
