--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="resume.html">Resume</a>
         </li>
         <li class="nav-item">
@@ -69,7 +69,7 @@
     <div class="row" style="font-size: 2rem; margin-top:1.5em;">
       <div class="col">
         <a href="https://docs.google.com/document/d/19iZ_UxZIsaVECLY9n4aJoDDNAEUgPlNMB02JdeULLEM/edit?usp=sharing"
-          target="_blank" style="text-decoration: none;" >Download <svg width="1em" height="1em" viewBox="0 0 16 16"
+          target="_blank" class="btn btn-outline-primary">Download <svg width="1em" height="1em" viewBox="0 0 16 16"
             class="bi bi-file-earmark-arrow-down-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
               d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7.5 1.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4a.5.5 0 0 0-1 0v3.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 11.293V7.5z" />
@@ -77,28 +77,17 @@
       </div>
     </div>
     <br>
-    <div class="row">
+    <div class="row" style="margin-bottom:20em">
       <div class="col-lg-12">
-        <img src="imgs/rgResume/rgResume-1.png" class="resume">
-        <br>
-        <br>
-        <br>
+        <img src="imgs/rgResume/rgResume-1.png" class="resume mb-5">
+        
         <img src="imgs/rgResume/rgResume-2.png" class="resume">
       </div>
     </div>
    
   </div>
 
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  
 
   <!-- Footer-------------------------------------------------------------->
 
@@ -106,8 +95,8 @@
     <div class="row">
       <div class="col">
         <h5>Account Links</h5>
-        <p><a href="https://github.com/rsg71">Github <i class="fab fa-github"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/robert-greenawalt/">LinkedIn <i class="fab fa-linkedin"></i></a></p>
+        <p><a href="https://github.com/rsg71" target="_blank">Github <i class="fab fa-github"></i></a></p>
+        <p><a href="https://www.linkedin.com/in/robert-greenawalt/" target="_blank">LinkedIn <i class="fab fa-linkedin"></i></a></p>
       </div>
       <div class="col">
         <h5>Site Navigation</h5>
